Members -> Team. Fixed some spacing with balupton description

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -30,7 +30,7 @@ a.documentation
 	background: #FAFAFA // rgba(238, 238, 238, 0.33)
 	color: colorTextSubheading
 
-	font-size: 13px
+	font-size: 0.8em
 	font-weight: 600
 	line-height: 1.4
 
@@ -91,12 +91,13 @@ a:not(.hover-link)
 
 h1, h2, h3, h4, h5, h6, h7
 	font-weight: 400
-	font-size: 20px
-	margin: 3em 0em 1em 0em
+	font-size: 1.25em
+	margin: 3.5em 0em 1em 0em
 	color: colorTextHeading
 
 h2, h3, h4, h5, h6, h7
 	font-weight: 300
+	margin-top: 3em
 
 h3
 	color: colorTextSubheading
@@ -136,8 +137,10 @@ h3
 
 h3 + p
 	margin: 0
+	line-height: 1.5em
+	margin-top: 0.2em
 
 p
-	line-height: 1.8
-	margin-bottom: 30px
-	font-size: 16px
+	line-height: 1.8em
+	margin-bottom: 2em
+	font-size: 1em
